# IM-MAG-Data-Processing-Tools

./: .coveragerc  .gitignore  IALiRT-mag-20100101-00h00m00s.csv  IALiRT-sc-20100101-00h00m00s.csv  IALiRT-sc-20251011-05h40m22s.csv  README.md  build-all.sh  build.sh  dev-env-first-time.sh  first-time.sh  install.sh  pack.sh  process_l0 copy.sh  processgap_l0.sh  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
sample-data/: MAGScience-IALiRT-20240214-15h02-large-tolerance.csv  MAGScience-normal-(1,2)-1s-20230922-11h50.csv  MAGScience-normal-(2,1)-1s-20230922-11h50-extra-secondary-data.csv  MAGScience-normal-(2,1)-1s-20230922-11h50.csv  MAGScience-normal-(2,1)-4s-20230922-11h50-incomplete-last-packet.csv  MAGScience-normal-(2,1)-4s-20230922-11h50-incomplete-packet-v2.csv  MAGScience-normal-(2,1)-4s-20230922-11h50-incomplete-packet.csv  MAGScience-normal-(2,2)-1s-20230922-11h50-fine-time-out-of-range.csv  MAGScience-normal-(2,2)-1s-20230922-11h50-single-zero-vector.csv  MAGScience-normal-(2,2)-1s-20230922-11h50.csv  MAGScience-normal-(2,2)-2s-20230922-11h50-fine-time-wraps.csv  MAGScience-normal-(2,2)-8s-20230922-11h50.csv  burst_data20230112-11h23-bad-time-course.csv  burst_data20230112-11h23-bad-time-fine.csv  burst_data20230112-11h23.csv  example-all-vectors-are-zero.csv  example-seq-count-wraps.csv  example.csv  mag_l0_missordered.pkts  normal_data20230112-11h23-bad-sequence-within-packet.csv  normal_data20230112-11h23-bad-sequence.csv
sample-data/ialirt/: sc_ialirt.pkts
scripts/: gapcheck-all-science.sh
src/: __init__.py  check_gaps.py  constants.py  filter_packets.py  ialirt_decoder.py  main.py  not-app.py  packet_util.py  parse_packets.py  science_decoder.py  science_mode.py  split_packets.py  time_util.py
tests/: __init__.py  notes-gap-check.txt  test_check_gaps.py  test_filter_packets.py  test_main.py  test_parse_packets.py  test_split_packets.py
(+4 files in other folders)
