[tool.poetry]
name = "mag"
version = "0.1.0"
description = "Data tools for MAG GSE data processing"
authors = ["Imperial College"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}
isort = "^5.11.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


