[tool.poetry]
name = "mag"
version = "1.9.0"
description = "Data tools for MAG GSE data processing"
authors = ["Imperial College"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
isort = "^5.11.4"
setuptools = "^70.0.0"
importlib-resources = "^6.4.0"
ccsdspy = "^1.3.1"
rich = "^13.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^22.12.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
# can execute via poetry, e.g. `poetry run mag hello world`
mag = 'src.main:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


