[tool.poetry]
name = "mag"
version = "2.0.0"
description = "Data tools for MAG GSE data processing"
authors = ["Imperial College"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
typer = "~0.19"
isort = "^5.11.4"
setuptools = "^80.9.0"
importlib-resources = "^6.4.0"
ccsdspy = "^1.3.1"
rich = "^13.8.0"
numpy = "^2.3.3"

[tool.poetry.group.dev.dependencies]
pytest-cov = "~7"
black = "^24.3.0"
flake8 = "^6.0.0"
pytest = "~8"

[tool.poetry.scripts]
# can execute via poetry, e.g. `poetry run mag hello world`
mag = 'src.main:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


